syntax = "proto3";
package onedb;
import "data.proto";

option java_package = "com.hufudb.onedb.proto";
option java_outer_classname = "OneDBPlan";

enum OperatorType {
  REF = 0;
  LITERAL = 1;
  // for binary
  PLUS = 2;
  MINUS = 3;
  TIMES = 4;
  DIVIDE = 5;
  MOD = 6;
  GT = 7;
  GE = 8;
  LT = 9;
  LE = 10;
  EQ = 11;
  NE = 12;
  AND = 13;
  OR = 14;
  // for unary
  AS = 15;
  NOT = 16;
  PLUS_PRE = 17;
  MINUS_PRE = 18;
  IS_NULL = 19;
  IS_NOT_NULL = 20;
  // for mutliple
  CASE = 21;
  SRAG = 22;
  SEARCH = 23;
  // for functions
  SCALAR_FUNC = 24;
  AGG_FUNC = 25;
}

enum Direction {
  ASC = 0;
  DESC = 1;
}

enum JoinType {
  INNER = 0;
  LEFT = 1;
  RIGHT = 2;
  OUTER = 3;
  SEMI = 4;
}

message Expression {
  OperatorType opType = 1;
  ColumnType outType = 2;
  repeated Expression in = 3;
  Modifier modifier = 4;
  oneof value {
    bool b = 5;
    int32 i32 = 6;
    int64 i64 = 7;
    float f32 = 8;
    double f64 = 9;
    string str = 10;
    bytes blob = 11;
  }
}

message Collation {
  int32 ref = 1;
  Direction direction = 2;
}

message JoinCondition {
  JoinType type = 1;
  Modifier modifier = 2;
  repeated int32 leftKey = 3;
  repeated int32 rightKey = 4;
  Expression condition = 5;
  bool isLeft = 7;
}

message TaskInfo {
  int64 taskId = 1;
  repeated int32 parties = 2;
}

enum PlanType {
  ROOT = 0;
  LEAF = 1;
  UNARY = 2;
  BINARY = 3;
  EMPTY = 4;
}

message QueryPlanProto {
  PlanType type = 1;
  TaskInfo taskInfo = 2;
  string tableName = 3;
  repeated Expression selectExp = 4;
  repeated Expression whereExp = 5;
  repeated Expression aggExp = 6;
  repeated int32 group = 7;
  repeated Collation order = 8;
  int32 fetch = 9;
  int32 offset = 10;
  JoinCondition joinInfo = 11;
  repeated QueryPlanProto children = 12;
}